# borish-image-source

./: CHANGELOG.md  CITATION.cff  LICENSE  PYODIDE_WEBSITE_QUICKSTART.md  README.md  SHA256SUMS.txt  VALIDATION_REPORT.txt  VERSION  borish_cli.py  borish_core.py  example_materials.json  index.html  pyodide_api.py  pyproject.toml  requirements-visualization.txt  rhino_pachyderm_bridge.py  validate_install.py
.github/workflows/: pages.yml
examples/concave_occlusion/: README.md  animate_concave_occlusion.py  borish_concave_L_room.mtl  borish_concave_materials.json  concave_occlusion_audit.py  generate_concave_room.py  run_concave_demo.ps1  run_concave_demo.sh
examples/shoebox/: README.md  borish_test_materials.json  borish_test_room.mtl  run_shoebox.ps1  run_shoebox.sh
tests/: test_concave_occlusion.py  test_pyodide_api.py  test_shoebox.py
tools/: animate_reflections.py  verify_result.py
web/: README.md  index.html  package.json
web/src/: downloads.js  ismWorker.js  main.js  meshLoaders.js  styles.css  viewer.js
